API: Update swagger endpoint documentation
