# internal/api/swagger.json
@@ -1716,6 +1716,9 @@
         },
         "/api/v1/echo": {
             "get": {
+                "tags": [
+                    "Other"
+                ],
                 "summary": "returns the request and response headers as JSON if debug mode is enabled",
                 "operationId": "Echo",
                 "responses": {
@@ -5278,11 +5281,21 @@
                 "tags": [
                     "Download"
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/{any}": {
             "options": {
+                "tags": [
+                    "Other"
+                ],
                 "summary": "returns CORS headers with an empty response body",
                 "operationId": "Options",
                 "responses": {
@@ -8334,6 +8347,12 @@
                 "resizeOperation": {
                     "$ref": "#/definitions/tensorflow.ResizeOperation"
                 },
+                "shape": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/tensorflow.ShapeComponent"
+                    }
+                },
                 "width": {
                     "type": "integer"
                 }
@@ -8354,6 +8373,15 @@
                 "Padding"
             ]
         },
+        "tensorflow.ShapeComponent": {
+            "type": "string",
+            "enum": [
+                "Batch"
+            ],
+            "x-enum-varnames": [
+                "ShapeBatch"
+            ]
+        },
         "time.Duration": {
             "type": "integer",
             "format": "int64",
@@ -8370,8 +8398,6 @@
                 1000,
                 1000000,
                 1000000000,
-                60000000000,
-                3600000000000,
                 1,
                 1000,
                 1000000,
@@ -8392,8 +8418,6 @@
                 "Microsecond",
                 "Millisecond",
                 "Second",
-                "Minute",
-                "Hour",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
